--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/encuentra_text"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="161dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="400dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="200dp"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/welcome_message"
+        android:textColor="@color/black_u"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/logoView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
+    <ImageView
+        android:id="@+id/logoView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="130dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintBottom_toTopOf="@id/startButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/encuentra_text"
+        tools:srcCompat="@drawable/conoceu___logo_principal" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/startButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="100dp"
-        android:text="Button"
+        android:backgroundTint="@color/yellow"
+        android:text="@string/iniciar_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/logoView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
