--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#FFC857 </color>
+    <color name="blue">#3B60E4 </color>
+    <color name="orange">#F26419 </color>
+    <color name="black_u">#191716 </color>
+    <color name="white_u">#FFFAFF </color>
 </resources>
