--- a/app/src/main/res/layout/activity_campus_home.xml
+++ b/app/src/main/res/layout/activity_campus_home.xml
@@ -7,58 +7,51 @@
     tools:context=".CampusHome">
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="0dp"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="138dp"
-        android:layout_marginTop="77dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="526dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="72dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/conoceu_logomedium" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="169dp"
-        android:layout_marginTop="47dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginBottom="460dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:fontFamily="@font/poppins_medium"
+        android:textAlignment="center"
+        android:textColor="@color/black_u"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:text="Ciudad Universitaria" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="119dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="293dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:backgroundTint="@color/blue"
+        android:text="@string/schools"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button2"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="211dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/blue"
+        android:text="@string/common_areas"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
