--- a/app/src/main/res/layout/activity_campus_home.xml
+++ b/app/src/main/res/layout/activity_campus_home.xml
@@ -17,11 +17,12 @@
         app:srcCompat="@drawable/conoceu_logomedium" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvCampusTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:fontFamily="@font/poppins_medium"
+        android:text="Ciudad Universitaria"
         android:textAlignment="center"
         android:textColor="@color/black_u"
         android:textSize="24sp"
@@ -39,9 +40,9 @@
         android:backgroundTint="@color/blue"
         android:text="@string/schools"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/tvCampusTitle"
+        app:layout_constraintStart_toStartOf="@+id/tvCampusTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvCampusTitle" />
 
     <Button
         android:id="@+id/button2"
