--- a/app/src/main/res/layout/activity_campus_menu.xml
+++ b/app/src/main/res/layout/activity_campus_menu.xml
@@ -50,6 +50,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/campusText" />
+        app:layout_constraintTop_toBottomOf="@+id/campusText"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
