New colors implemented. New app theme implemented.

--- a/app/src/main/res/layout/activity_campus_home.xml
+++ b/app/src/main/res/layout/activity_campus_home.xml
@@ -24,7 +24,7 @@
         android:fontFamily="@font/poppins_medium"
         android:text="Ciudad Universitaria"
         android:textAlignment="center"
-        android:textColor="@color/black_u"
+        android:textColor="@color/primary_text"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/accent_color"
         android:text="@string/schools"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/tvCampusTitle"
@@ -49,7 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/accent_color"
         android:text="@string/common_areas"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/button"
