--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="200dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/welcome_message"
-        android:textColor="@color/blue"
+        android:textColor="@color/primary_text"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/logoMain"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="100dp"
-        android:backgroundTint="@color/yellow"
+        android:backgroundTint="@color/primary_color"
         android:text="@string/iniciar_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
