--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="100dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/accent_color"
         android:text="@string/escanear"
         app:layout_constraintBottom_toTopOf="@id/findButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/accent_color"
         android:text="@string/buscar"
         app:layout_constraintBottom_toTopOf="@id/instructionButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
         android:layout_marginBottom="8dp"
         android:text="@string/instrucciones"
         android:textAlignment="center"
-        android:textColor="@color/orange"
+        android:textColor="@color/secondary_text"
         app:layout_constraintBottom_toTopOf="@id/whatIsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_marginBottom="100dp"
         android:text="@string/que_es"
         android:textAlignment="center"
-        android:textColor="@color/orange"
+        android:textColor="@color/secondary_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
