--- a/app/src/main/res/layout/campus_button.xml
+++ b/app/src/main/res/layout/campus_button.xml
@@ -9,7 +9,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
-    android:backgroundTint="@color/yellow"
+    android:backgroundTint="@color/primary_color"
     app:cardCornerRadius="16dp">
 
     <LinearLayout
