--- a/app/src/main/res/layout/activity_campus_home.xml
+++ b/app/src/main/res/layout/activity_campus_home.xml
@@ -33,7 +33,7 @@
         tools:text="Ciudad Universitaria" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSchool"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
@@ -45,14 +45,14 @@
         app:layout_constraintTop_toBottomOf="@+id/tvCampusTitle" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnPlaces"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/accent_color"
         android:text="@string/common_areas"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/btnSchool"
+        app:layout_constraintStart_toStartOf="@+id/btnSchool"
+        app:layout_constraintTop_toBottomOf="@+id/btnSchool" />
 </androidx.constraintlayout.widget.ConstraintLayout>
