--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/background_app">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/welcomeText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="64dp"
-        android:layout_marginEnd="200dp"
-        android:fontFamily="sans-serif-black"
+        android:layout_marginEnd="50dp"
+        android:fontFamily="@font/roboto_black"
         android:text="@string/welcome_message"
+        android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@color/primary_text"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/logoMain"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,11 +27,10 @@
     <ImageView
         android:id="@+id/logoMain"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="300dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="50dp"
-        app:layout_constraintBottom_toTopOf="@id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
@@ -39,15 +40,17 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/startButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginBottom="100dp"
         android:backgroundTint="@color/primary_color"
+        app:layout_constraintTop_toBottomOf="@id/logoMain"
         android:text="@string/iniciar_button"
+        app:cornerRadius="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoMain" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
