--- a/app/src/main/res/layout/place_button.xml
+++ b/app/src/main/res/layout/place_button.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_height="90dp"
+    android:layout_margin="4dp"
     android:backgroundTint="@color/primary_color"
     app:cardCornerRadius="12dp">
 
@@ -15,7 +15,7 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageSchool"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
@@ -40,7 +40,7 @@
             android:text="TextView"
             android:textColor="@color/white_color"
             android:textSize="20sp"
-            tools:text="FIME" />
+            tools:text="Facultas de Ingenieria Mecanica y Electrica." />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
