--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,170 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillColor="#3DDC84"
-        android:pathData="M0,0h108v108h-108z" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M9,0L9,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,0L19,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,0L29,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,0L39,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,0L49,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,0L59,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,0L69,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,0L79,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M89,0L89,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M99,0L99,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,9L108,9"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,19L108,19"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,29L108,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,39L108,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,49L108,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,59L108,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,69L108,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,79L108,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,89L108,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,99L108,99"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,29L89,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,39L89,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,49L89,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,59L89,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,69L89,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,79L89,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,19L29,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,19L39,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,19L49,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,19L59,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,19L69,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,19L79,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M280.4,260.2c-0.1,0 -0.1,0 -0.2,-0.1c-0.3,-0.1 -0.6,-0.2 -0.9,-0.3c-7.3,-2.9 -15.2,-4.4 -23.5,-4.4c-6.2,0 -12.1,0.9 -17.8,2.5c-2.8,0.8 -5.5,1.8 -8.1,2.9c-0.2,0.1 -0.5,0.2 -0.7,0.3l-28.7,-57.8c16.8,-7.9 35.5,-12.4 55.3,-12.4c17.6,0 34.3,3.5 49.6,9.9C305.5,200.8 280.4,260.2 280.4,260.2z"
+      android:fillColor="#4CAF50"/>
+  <path
+      android:pathData="M202.5,283.6c-7.1,10.4 -11.3,23 -11.3,36.5h-64.5c0,-25.4 7.9,-50 20.6,-70L202.5,283.6z"
+      android:fillColor="#FFC107"/>
+  <path
+      android:pathData="M229.3,261.1c0,0 -0.1,0 -0.1,0.1c-10.5,4.7 -19.4,12.2 -26,21.4c-0.2,0.3 -0.4,0.6 -0.7,1l-55.2,-33.5c12.9,-19.9 31.8,-36.4 53.3,-46.8L229.3,261.1z"
+      android:fillColor="#B7FF08"/>
+  <path
+      android:pathData="M384.3,320.1h-63.8c0,-13.5 -4,-26 -10.9,-36.4l55.2,-32.9C377.2,270.9 384.3,294.6 384.3,320.1z"
+      android:fillColor="#FF0000"/>
+  <path
+      android:pathData="M309.6,284.1c-0.2,-0.3 -0.4,-0.6 -0.6,-0.8c-7.1,-10.2 -17,-18.2 -28.6,-23l25,-59.5c24.5,10.2 45.3,27.8 59.4,49.9C365,251 309.6,284.1 309.6,284.1z"
+      android:fillColor="#FF5722"/>
+  <path
+      android:pathData="M297.9,320.1H214c0,-9.8 3.4,-18.8 9,-26c3.8,-4.8 8.6,-8.8 14.1,-11.5c1.1,-0.5 2.2,-1.1 3.4,-1.5c2.6,-1 5.4,-1.8 8.2,-2.3c2.4,-0.4 4.8,-0.6 7.2,-0.6c5.1,0 10,0.9 14.5,2.6c0.3,0.1 0.7,0.3 1,0.4c7.1,2.8 13.3,7.6 17.9,13.6C294.7,301.8 297.9,310.6 297.9,320.1z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M257.6,317.1c-1.3,0.4 -2.7,0.5 -4.2,0.2c-0.2,-0.1 -0.4,-0.1 -0.7,-0.2c-0.2,-0.1 -0.4,-0.2 -0.6,-0.3c-2.9,-1.3 -4.6,-4.4 -4.1,-7.6c0,-0.1 0,-0.1 0,-0.2l0.9,-2.9l0,0l3.5,-11.2l4,-12.7l6.3,-20.3l2.2,-7.1l0,0l0,0l0,0l12.2,-39c0.1,-0.5 0.6,-0.7 1.1,-0.6l1.5,0.4c0.5,0.1 0.7,0.6 0.6,1l-9.1,48l-4.1,21.4l-2.6,13.9l-2.1,10.9l-0.3,1.5l-0.1,0.3c0,0.1 0,0.1 0,0.2C261.2,314.9 259.6,316.4 257.6,317.1z"/>
+  <path
+      android:pathData="M252.2,308.3c0.7,-1.7 2.6,-2.5 4.3,-1.9c1.7,0.7 2.5,2.6 1.9,4.3c-0.7,1.7 -2.6,2.5 -4.3,1.9C252.4,311.9 251.6,310 252.2,308.3z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M0,0h512v512h-512z"
+      android:fillColor="#FFFAFF"/>
 </vector>
